# Swarm6333

./: MidtermStudy.docx  README.md  ResearchSlides.md  Untitled-1.py
Hw1/: OjedaAlejandrohw1.html  OjedaAlejandrohw1.ipynb  graph.pptx
Hw2/: OjedaAlejandroHW2.html  OjedaAlejandrohw2 copy.ipynb  OjedaAlejandrohw2.ipynb  aux1a.py
Hw3/: Exercise1.ipynb  Exercise3.ipynb
Hw3/Report/: Exercise1-2.html  Exercise1.ipynb  Exercise3.html
Project/swarm_ws/: frames.gv
Project/swarm_ws/install/: local_setup.sh  setup.sh
Project/swarm_ws/install/aruco_opencv/lib/aruco_opencv/: aruco_tracker  aruco_tracker_autostart  create_board  create_marker
Project/swarm_ws/install/aruco_opencv/share/aruco_opencv/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Project/swarm_ws/install/aruco_opencv_msgs/share/aruco_opencv_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
Project/swarm_ws/install/choirbot/share/choirbot/: package.bash  package.sh  package.xml  package.zsh
Project/swarm_ws/install/choirbot_examples/lib/choirbot_examples/: choirbot_bearingformationcontrol_guidance  choirbot_bearingformationcontrol_integrator  choirbot_quadrotorbearingformationcontrol_controller  choirbot_quadrotorbearingformationcontrol_guidance  choirbot_quadrotorbearingformationcontrol_integrator
Project/swarm_ws/install/choirbot_examples/share/choirbot_examples/: containment.launch.py  (+14 more)
Project/swarm_ws/log/: latest_build
Project/swarm_ws/src/ChoiRbot/: Dockerfile  requirements.txt
Project/swarm_ws/src/ChoiRbot/choirbot_interfaces/: CMakeLists.txt
Project/swarm_ws/src/ChoiRbot/choirbot_io/: package.xml  setup.cfg  setup.py
Project/swarm_ws/src/ChoiRbot/choirbot_io/choirbot_io/: aruco_detector.py  aruco_detector_old.py  aruco_detector_v1.py  ble_bridge.py  calibration_data_nishant_cam.npz  calibration_data_usb_cam.npz  goal_gui.py
Slides/: ResearchSlides.md
(+542 files in other folders)
